[project]
name = "database-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.15.0",
    "faker>=40.35.0",
    "fastembed>=0.8.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sqlglot>=30.13.0",
    "typer>=0.27.0",
]
